NXP-16452: cleanup / format